horizontal scroll fixed

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   font-family: 'Lato', sans-serif;
 }
 
